--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
 
-Ezequiel Cabrera <aca mail>
+Ezequiel Cabrera <ezequielcabrera2601@gmail.com>
 Agustin Labadie <labalabadie@gmail.com>
